change: completely redid /citizen command, and some refactoring in Citizen